# dave-ledger

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker_build.yml
config/: default.yaml
dave_ledger/: __init__.py  __main__.py  baselines.py  ingest.py  paths.py  pipeline.py  scoring.py  transform.py  valuation.py
notebooks/: 00_bootstrap.ipynb  01_ingest_data.ipynb  02_modeling.ipynb
src/dave_ledger/: __init__.py  __main__.py  pipeline.py
src/dave_ledger/analysis/: __init__.py  baselines.py  valuation.py
src/dave_ledger/core/: __init__.py  config.py  scoring.py
src/dave_ledger/etl/: __init__.py  cleaning.py  extract.py  ingest.py  transform.py  xfp.py
tests/: test_birth_year_imputation.py  test_config_smoke.py
